# booking

./: .cursorrules  Makefile  README.md  docker-compose.yml  pyproject.toml
booking/: appointments.csv  barbers.csv  customers.csv  data.sql  services.csv  shops.csv  surcharge_settings.csv
init/: init.sql
squire/app/: __init__.py  config.py  database.py  main.py
squire/app/api/: appointments.py  barbers.py  customers.py  services.py  shops.py  surcharge_settings.py
squire/app/models/: __init__.py  appointment.py  barber.py  customer.py  service.py  shop.py  surcharge_setting.py
squire/app/schemas/: appointment.py  barber.py  customer.py  service.py  shop.py  surcharge_setting.py
